# ChangeLog for net-libs/rb_libtorrent
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.47 2008/04/09 16:23:10 armin76 Exp $

*rb_libtorrent-0.13 (09 Apr 2008)

  09 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  -rb_libtorrent-0.13_rc3.ebuild, +rb_libtorrent-0.13.ebuild:
  Version bump

*rb_libtorrent-0.13_rc3 (24 Mar 2008)

  24 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  -rb_libtorrent-0.13_pre1912.ebuild, -rb_libtorrent-0.13_rc1.ebuild,
  +rb_libtorrent-0.13_rc3.ebuild:
  Version bump

  22 Mar 2008; Markus Rothe <corsair@gentoo.org>
  rb_libtorrent-0.13_rc1.ebuild:
  Added ~ppc/~ppc64 (ranger missed the latest version for ~ppc64); bug #211992

  11 Mar 2008; Brent Baude <ranger@gentoo.org>
  rb_libtorrent-0.13_pre1912.ebuild:
  Marking rb_libtorrent-0.13_pre1912 ~ppc64 for bug 211992

*rb_libtorrent-0.13_rc1 (09 Mar 2008)

  09 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  +rb_libtorrent-0.13_rc1.ebuild:
  Version bump

  10 Feb 2008; Raúl Porcel <armin76@gentoo.org> -rb_libtorrent-0.12.ebuild:
  old

  05 Feb 2008; Samuli Suominen <drac@gentoo.org>
  rb_libtorrent-0.12.1.ebuild:
  amd64 stable wrt security #208854

  04 Feb 2008; Dawid Węgliński <cla@gentoo.org>
  rb_libtorrent-0.12.1.ebuild:
  Stable on x86 (bug #208854)

*rb_libtorrent-0.12.1 (04 Feb 2008)

  04 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  +rb_libtorrent-0.12.1.ebuild:
  Version bump

*rb_libtorrent-0.13_pre1912 (09 Jan 2008)

  09 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  -rb_libtorrent-0.13_pre1876.ebuild, +rb_libtorrent-0.13_pre1912.ebuild:
  Version bump, remove old

*rb_libtorrent-0.13_pre1876 (31 Dec 2007)

  31 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  +rb_libtorrent-0.13_pre1876.ebuild, -rb_libtorrent-0.13_pre1806_p1.ebuild:
  Version bump

*rb_libtorrent-0.13_pre1806_p1 (09 Dec 2007)

  09 Dec 2007; Raúl Porcel <armin76@gentoo.org>